--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, OldWeatherApp!</string>
+    <string name="welcome">Welcome to OldWeather.\n\nLog in to continue\n</string>
+    <string name="username">Username:</string>
+    <string name="passwd">Password:</string>
     <string name="app_name">OldWeatherAndroid</string>
 </resources>
